[package]
name = "coreml_env"
version = "0.1.0"
edition = "2021"
description = "Run CoreML with wasmer"
[lib]
crate-type = ["staticlib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = { version = "4.0.0-alpha.1", features = ["tracing", "jit"] }
log = "0.4"
fern = "0.6.2"
oxhttp="0.1"